Misc data & viz fix

--- a/styles.html
+++ b/styles.html
@@ -4,9 +4,10 @@
 
 body, h1, h2, h3, h4, h5, h6, .descr, td, table {
    font-family: 'Open Sans Condensed', sans-serif;
-   background-color: white;
+   background-color: #060d13;
    font-size: 18px;
-   margin:3px 17px 4px 1px;
+   margin:10px 17px 4px 1px;
+   color: #f2f2f2;
 }
 
 #cite {
@@ -18,8 +19,10 @@ body, h1, h2, h3, h4, h5, h6, .descr, td, table {
 
 .descr {
    z-index: 5;
-   font-size: 1em; color: #707070;
+   font-size: 0.9em; color: #f7f5ed;
    margin-right:5px; 
+   margin-bottom: 12px;
+   margin-left:5px; 
 }
 
 .graphic{
@@ -37,11 +40,13 @@ h2 {
    font-weight: 700;
    line-height: 95%;
    margin-bottom: 5px;
-      margin-right:5px; 
+   margin-right:5px; 
+   margin-left:5px; 
 }
 
 h3 {
    font-size:1.1em
+    margin-left:5px; 
 }
 
 h4 {
