--- a/02_viz.html
+++ b/02_viz.html
@@ -128,13 +128,18 @@ $(document).ready(function () {
 <li><a href="#todo">ToDo</a></li>
 <li><a href="#translation">Translation</a></li>
 <li><a href="#txt">Txt</a></li>
-<li><a href="#snippets">Snippets</a></li>
+<li><a href="#snippets">Snippets</a><ul>
+<li><a href="#related">Related</a></li>
+<li><a href="#links">Links</a></li>
+</ul></li>
 </ul>
 </div>
 
 <div id="todo" class="section level2">
 <h2>ToDo</h2>
-<p>However themes do not tell whether increase or decrease</p>
+<ul>
+<li>Some subjectivity in defining ballot theme</li>
+</ul>
 </div>
 <div id="translation" class="section level2">
 <h2>Translation</h2>
@@ -142,18 +147,44 @@ $(document).ready(function () {
 </div>
 <div id="txt" class="section level2">
 <h2>Txt</h2>
-<p>Environement, foreigners, woman status</p>
-<p><em>Since 1848, Swiss had their say over 600 nationwide ballots. Are there themes which have been recently more popular? Here is visual summary spanning over 170 years of Swiss polls </em></p>
-<p>Nearly half of the states in the world have some form of direct legislation. But Switzerland stands alone in how extensively it uses it. In most part of the world, referendums and initiatives remain rare. But Swiss go to polls about four times a year for national votes. But to give their say on what kind of topic? swissinfo.ch looked at all the ballots’ themes since Switzerland’s first constitution in 1848.</p>
-<p>We used the data compiled by the Centre for Research on Direct Democracy which tagged to all nationwide ballots in Switzerland (over 600) themes. Each ballot got assigned between 1 to 3 theme. Here is under</p>
+<div id="environement-foreigners-woman-status" class="section level4">
+<h4>Environement, foreigners, woman status</h4>
+<div id="section" class="section level5">
+<h5></h5>
+<p><em>Since 1848, Swiss had their say over 600 nationwide ballots. Are there themes that have recently beenmore popular? Here is visual summary spanning over 170 years of Swiss polls</em></p>
+<p>Nearly half of the states in the world have some form of direct legislation. But Switzerland stands alone in how extensively it uses it. Swiss go to polls about four times a year for national votes. But to give their say on what topic? swissinfo.ch looked at allballots’ themes since Switzerland’s first constitution in 1848.</p>
+<p>We used for that data compiled by the Centre for Research on Direct Democracy which tagged all nationwide ballots in Switzerland (over 600) with keyword themes. Each ballot got assigned between 1 to 3 theme. Here is under a graphic showing the frequency of all themes:</p>
+<p>GRAPHIC</p>
+<p>However, such theme wordcloud do not tell us anything about the ballots’ outcome nor how these themes evolved over time. A more complete view is offered under, showing the detailed ballots over time by theme. If you are not familiar with direct democracy, please note that there are three different types of votes represented in this graphic:</p>
+<ul>
+<li>Mandatory referendums (since 1848): In the case of a change, however small, to the constitution by parliament, the people must have their say. The same goes for membership in supranational communities or in the adoption of laws that have been declared urgent.</li>
+<li>Optional referendums: (since 1875): Swiss citizens can also contest all laws adopted or modified by parliament. For an “optional referendum” vote to take place, at least 50,000 signatures from citizens must be filed.</li>
+<li>People’s initiatives: (since 1893): People’s initiatives allow citizens to propose changes to the constitution by introducing new provisions, or by amending or repealing existing provisions. For an initiative to be submitted for a verdict at the polls, its proponents must gather at least 100,000 signatures from citizens eligible to vote.</li>
+</ul>
+<p>In general, people’s initatives are much more often refused than referendums. About 90% of all People’s initiatives have been rejected by Swiss citizens, while over 70% of mandatory Referendums have been accepted.</p>
+<p>(illustrated here) <a href="https://www.swissinfo.ch/directdemocracy/explore-600-national-votes_how-direct-democracy-has-grown-over-the-decades/41481992" class="uri">https://www.swissinfo.ch/directdemocracy/explore-600-national-votes_how-direct-democracy-has-grown-over-the-decades/41481992</a>)</p>
+<p>GRAPHIC</p>
+<p>There is of course some subjectivity in defining what are the topics for every ballot. However based on the data at hand, we can observe rise of people’s initiatives regarding the environement, immigration and the status of woman.</p>
+</div>
+</div>
 </div>
 <div id="snippets" class="section level2">
 <h2>Snippets</h2>
-<p>Switzerland‟s first constitution of 1848 followed the principle of representation. It contained only two direct-democratic rights: the mandatory constitutional referendum and the popular ini- tiative for a complete revision of the federal constitution. The other popular rights were introduced gradually in a process which took many years. We have to consider them as concessions which the political elite had to make to opposition forces.</p>
+<p>Switzerland‟s first constitution of 1848 followed the principle of representation. It contained only two direct-democratic rights: the mandatory constitutional referendum and the popular initiative for a complete revision of the federal constitution. The other popular rights were introduced gradually in a process which took many years. We have to consider them as concessions which the political elite had to make to opposition forces.</p>
 <p>De 1848 à 1875, il n’y a eu que des « référendums obligatoires » prévus par la constitution sur les sujets les plus importants définies par celle-ci. Pour qu’un texte voté par le parlement soit adopté sur certains sujets, il faut une majorité simple des citoyens plus une majorité des cantons (25 cantons jusqu’en 1978 ; 26 depuis la création du canton du Jura).</p>
 <p>En 1875, fut introduit le « référendum facultatif ». Par une pétition de 50 000 signatures contre une loi votée par le parlement, des citoyens peuvent déclencher un référendum contre cette loi. La majorité simple des votants décide si la loi est adoptée ou rejetée par le peuple. Ce dispositif donne au peuple un droit de veto contre les textes votés par le parlement. C’est un « frein » contre les modifications de la loi non souhaitées par le peuple.</p>
 <p>basic distinction is made between popular initiatives and ref- erendums.</p>
 <p>The referendum, on the other hand, allows parliamentary decisions which have already been taken to be struck down or modified.8 Referendums can be subdivided into those which are obligatory and those which are facultative i.e. optional. Obligatory referen- dums relate to issues which must be submitted to a popular vote i.e. where no popular request is required. A facultative referendum only comes to a vote if a proportion of the voters (50,000) has demanded it. The referendum is a means whereby important state decisions are made subject to popular approval</p>
+<div id="related" class="section level3">
+<h3>Related</h3>
+<ul>
+<li><a href="https://www.swissinfo.ch/directdemocracy/direct-democracy_what-s-a-people-s-or-citizens--initiative-/41229350">Video explainer</a></li>
+<li><a href="https://www.swissinfo.ch/directdemocracy/direct-democracy-glossary/40515752">Glossary</a></li>
+<li><a href="https://www.swissinfo.ch/directdemocracy/explore-600-national-votes_how-direct-democracy-has-grown-over-the-decades/41481992">data</a></li>
+</ul>
+</div>
+<div id="links" class="section level3">
+<h3>Links</h3>
 <ul>
 <li>In general, people’s initatives are most often refused.</li>
 <li></li>
@@ -230,7 +261,14 @@ txt &lt;- loadTranslation(translation.file)</code></pre>
 <pre class="r"><code># viz subset top keywords
 kw.sub &lt;- head(keywords, 40) %&gt;% names()
 
-if(exploreData) {
+data %&gt;% group_by(type) %&gt;% summarise(pc_approved = sum(Result == &quot;yes&quot;) / length(Result)) %&gt;% ungroup()</code></pre>
+<pre><code>## # A tibble: 3 x 2
+##                     type pc_approved
+##                    &lt;chr&gt;       &lt;dbl&gt;
+## 1 facultative Referendum   0.5659341
+## 2             initiative   0.1057692
+## 3   mandatory Referendum   0.7215190</code></pre>
+<pre class="r"><code>if(exploreData) {
   ggplot(data = ddd %&gt;% filter(keyword %in% kw.sub), aes(x = tbin, y = y, fill = `yes_pc`)) + 
     geom_tile(colour = &quot;white&quot;, size = 0.5) + swi_theme(y_gridlines = F) + 
     scale_fill_gradient2(low = swi_col[8], high = swi_col[1], midpoint = 50) +
@@ -388,6 +426,7 @@ if(exploreData) {
       tags$head(includeHTML(style_swi_highcharter()), includeCSS(shapes.path)),
       tags$h2(HTML(txt['main.title', lang])),
       div(class = &quot;descr&quot;, HTML(paste0('&lt;img src=&quot;https://interactive.swissinfo.ch/assets/Interactive_icon.svg.png&quot; width=&quot;15&quot; align=&quot;top&quot;&gt;&amp;nbsp; ', txt['descr', lang]))),
+      tags$h3(HTML(txt['h3', lang])),
       div(class = &quot;graphic&quot;, hw_grid(plots, ncol = 3, rowheight = chart.height)),
       div(id = &quot;cite&quot;, HTML(source)),
       # div(class = &quot;footer&quot;, HTML(txt['footer', lang])),
@@ -403,7 +442,7 @@ kwf &lt;- data %&gt;% select(starts_with(&quot;keyword&quot;)) %&gt;% unlist() %
 kwf &lt;- kwf[-which(names(kwf) == &quot;none&quot;)]
 
 
-wc &lt;- d3wordcloud(names(kwf), kwf, colors=sample(swi_col[-c(1, length(swi_col))], length(kwf), T) , tooltip = T, padding = 1,
+wc &lt;- d3wordcloud(names(kwf), kwf, colors = sample(c(swi_col[-c(1, length(swi_col))], swi_pal[1:16]), length(kwf), T) , tooltip = T, padding = 1,
                   spiral = &quot;rectangular&quot;, rotate.min = -30, rotate.max = 0, height=470,  font = &quot;Open Sans&quot;)
 
 wc$sizingPolicy$defaultWidth &lt;- &quot;100%&quot;
@@ -425,6 +464,7 @@ lang &lt;- 'EN'
         div(id = &quot;cite&quot;, HTML(source)),
         HTML(iframeresizer)
       )), file = paste0(&quot;keyword_worldcloud_&quot;, lang, &quot;.html&quot;), libdir = &quot;js&quot;, background = &quot;#060d13&quot;)  </code></pre>
+</div>
 </div>
 
 
