--- a/styles.html
+++ b/styles.html
@@ -11,9 +11,12 @@ body, h1, h2, h3, h4, h5, h6, .descr, td, table {
 }
 
 #cite {
-    font-size: 0.7em; color: #B8B8B8; text-align: right; margin-top:7px; margin-right:25px; padding-bottom: 3px;
+    font-size: 0.7em; 
+    color: #B8B8B8; text-align: right; 
+    margin-top:13px; 
+    margin-right:20px; 
+    padding-bottom: 3px;
     position: relative;
-    bottom: 27px;
 }
 #cite a { text-decoration: none; color: #821122; }
 
@@ -38,7 +41,7 @@ h2 {
    z-index: 7;
    font-size:1.3em;
    font-weight: 700;
-   line-height: 95%;
+   line-height: 107%;
    margin-bottom: 5px;
    margin-right:5px; 
    margin-left:5px; 
@@ -65,7 +68,6 @@ h6 {
 a:visited {
    color: rgb(50%, 0%, 50%);
 }
-
 
 @media screen and (max-width: 600px) {
   body {
