--- a/styles.html
+++ b/styles.html
@@ -12,13 +12,13 @@ body, h1, h2, h3, h4, h5, h6, .descr, td, table {
 
 #cite {
     font-size: 0.7em; 
-    color: #B8B8B8; text-align: right; 
+    color: #e5dbcd; text-align: right; 
     margin-top:13px; 
     margin-right:20px; 
     padding-bottom: 3px;
     position: relative;
 }
-#cite a { text-decoration: none; color: #821122; }
+#cite a { text-decoration: none; color:#e3cda1; }
 
 .descr {
    z-index: 5;
@@ -38,6 +38,7 @@ h1 {
 }
 
 h2 {
+   color:#ffffff;
    z-index: 7;
    font-size:1.3em;
    font-weight: 700;
