--- a/keyword_worldcloud_EN.html
+++ b/keyword_worldcloud_EN.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8"/>
-<script src="js/htmlwidgets-0.8/htmlwidgets.js"></script>
+<script src="js/htmlwidgets-0.9/htmlwidgets.js"></script>
 <script src="js/d3-3.5.2/d3.min.js"></script>
 <script src="js/d3wordcloud-1/d3.layout.cloud.js"></script>
 <script src="js/d3wordcloud-binding-0.1/d3wordcloud.js"></script>
@@ -20,13 +20,13 @@ body, h1, h2, h3, h4, h5, h6, .descr, td, table {
 
 #cite {
     font-size: 0.7em; 
-    color: #B8B8B8; text-align: right; 
+    color: #e5dbcd; text-align: right; 
     margin-top:13px; 
     margin-right:20px; 
     padding-bottom: 3px;
     position: relative;
 }
-#cite a { text-decoration: none; color: #821122; }
+#cite a { text-decoration: none; color:#e3cda1; }
 
 .descr {
    z-index: 5;
@@ -46,6 +46,7 @@ h1 {
 }
 
 h2 {
+   color:#ffffff;
    z-index: 7;
    font-size:1.3em;
    font-weight: 700;
@@ -93,8 +94,8 @@ a:visited {
     <h2>What are the most common themes in Switzerland's federal ballot?</h2>
     <div class="descr">Keyword themes assigned to all federal ballots in Switzerland since 1848. Words' sizes are scaled according to their frequency. Hover over a term to see its count.</div>
     <div class="graphic">
-      <div id="htmlwidget-c3e93a56049b5f8f36d4" style="width:100%;height:500px;" class="d3wordcloud html-widget"></div>
-      <script type="application/json" data-for="htmlwidget-c3e93a56049b5f8f36d4">{"x":{"data":{"text":["Indirect taxation","Intergovernmental relations","Environmental policy","Fundamental rights","Immigration policy","Budget cuts and remediation measures","Pension insurance","Criminal law","Status of women","Crop production","Structural policy","Parliament","Health and accident insurance","Financial system","Tax policy","Addictive substances","Government, administration","Tax system","Direct taxation","Electoral system","Referendum","Road transport","Monetary policy","Division of tasks","National economic supply","Protection of nature and cultural heritage","Road construction","Agricultural policy","Armed forces - general","Health policy","Arms","Tenancy issues","Children and young people","Livestock","Pricing policy","Citizenship","Economic policy","Employment policy","Legislative procedure","State security","Employment conditions","Refugees","Short-term economic policy","Competition policy","Consumer protection","EU","Family policy","Nuclear energy","Social Policy","Working hours","Citizen's initiatives","Citizens' rights","Cultural policy","Energy policy","Religion - churches","Universities","Voting rights"],"freq":[44,43,36,34,30,29,28,24,24,23,22,21,20,19,19,18,18,18,17,17,17,17,16,15,15,15,15,14,14,14,13,13,12,12,12,11,11,11,11,11,10,10,10,9,9,9,9,9,9,9,8,8,8,8,8,8,8],"size":[44,43,36,34,30,29,28,24,24,23,22,21,20,19,19,18,18,18,17,17,17,17,16,15,15,15,15,14,14,14,13,13,12,12,12,11,11,11,11,11,10,10,10,9,9,9,9,9,9,9,8,8,8,8,8,8,8],"color":["#e3cda1","#368596","#ab3d3f","#996666","#e3cda1","#ac7f3e","#b15953","#669999","#e3cda1","#b15953","#366096","#b15953","#beb298","#996666","#ac7f3e","#999966","#beb298","#7e827a","#beb298","#663333","#999966","#669999","#999966","#ab3d3f","#3a9736","#663333","#996666","#366096","#999966","#d18768","#7e827a","#336666","#ac673e","#ac7f3e","#663333","#3a9736","#996666","#663333","#368596","#996699","#d18768","#996666","#666699","#ac673e","#999966","#beb298","#ac673e","#368596","#ac673e","#666699","#d18768","#996666","#336666","#ac673e","#7e827a","#663333","#368596"]},"pars":{"font":"Open Sans","padding":2,"rotmin":-30,"rotmax":-30,"tooltip":true,"rangesizefont":[10,40],"sizescale":"linear","colorscale":"linear","spiral":"rectangular","colors":["#e3cda1","#368596","#ab3d3f","#996666","#e3cda1","#ac7f3e","#b15953","#669999","#e3cda1","#b15953","#366096","#b15953","#beb298","#996666","#ac7f3e","#999966","#beb298","#7e827a","#beb298","#663333","#999966","#669999","#999966","#ab3d3f","#3a9736","#663333","#996666","#366096","#999966","#d18768","#7e827a","#336666","#ac673e","#ac7f3e","#663333","#3a9736","#996666","#663333","#368596","#996699","#d18768","#996666","#666699","#ac673e","#999966","#beb298","#ac673e","#368596","#ac673e","#666699","#d18768","#996666","#336666","#ac673e","#7e827a","#663333","#368596"],"every_word_has_own_color":true,"missing_colors":false,"label":null}},"evals":[],"jsHooks":[]}</script>
+      <div id="htmlwidget-0d797fb330926cb3ec66" style="width:100%;height:530px;" class="d3wordcloud html-widget"></div>
+      <script type="application/json" data-for="htmlwidget-0d797fb330926cb3ec66">{"x":{"data":{"text":["Indirect taxation","Intergovernmental relations","Environmental policy","Fundamental rights","Immigration policy","Budget cuts and remediation measures","Pension insurance","Criminal law","Status of women","Crop production","Structural policy","Parliament","Health and accident insurance","Financial system","Tax policy","Addictive substances","Government, administration","Tax system","Direct taxation","Electoral system","Referendum","Road transport","Monetary policy","Division of tasks","National economic supply","Protection of nature and cultural heritage","Road construction","Agricultural policy","Armed forces - general","Health policy","Arms","Tenancy issues","Children and young people","Livestock","Pricing policy","Citizenship","Economic policy","Employment policy","Legislative procedure","State security","Employment conditions","Refugees","Short-term economic policy","Competition policy","Consumer protection","EU","Family policy","Nuclear energy","Social Policy","Working hours"],"freq":[44,43,36,34,30,29,28,24,24,23,22,21,20,19,19,18,18,18,17,17,17,17,16,15,15,15,15,14,14,14,13,13,12,12,12,11,11,11,11,11,10,10,10,9,9,9,9,9,9,9],"size":[44,43,36,34,30,29,28,24,24,23,22,21,20,19,19,18,18,18,17,17,17,17,16,15,15,15,15,14,14,14,13,13,12,12,12,11,11,11,11,11,10,10,10,9,9,9,9,9,9,9],"color":["#F7F5ED","#F4F0E3","#F2EBDA","#EFE6D1","#EDE1C7","#EADCBE","#E8D7B5","#E5D2AB","#E3CDA2","#DFCAA0","#DAC69E","#D6C39D","#D1C09C","#CDBD9B","#C8B99A","#C4B699","#BFB398","#BFAE94","#C1A98E","#C4A388","#C69E82","#C8997C","#CB9476","#CD8E70","#CF896A","#CB8669","#C1866B","#B7856D","#AD846F","#A38471","#998374","#8E8376","#848278","#808078","#867B73","#8C766E","#92716A","#996C65","#9F6760","#A5625B","#AB5D56","#AE5953","#A25A57","#965C5A","#895D5E","#7D5F61","#716065","#646268","#58636C","#4C6570"]},"pars":{"font":"Open Sans","padding":1,"rotmin":-30,"rotmax":-30,"tooltip":true,"rangesizefont":[10,35],"sizescale":"linear","colorscale":"linear","spiral":"rectangular","colors":["#F7F5ED","#F4F0E3","#F2EBDA","#EFE6D1","#EDE1C7","#EADCBE","#E8D7B5","#E5D2AB","#E3CDA2","#DFCAA0","#DAC69E","#D6C39D","#D1C09C","#CDBD9B","#C8B99A","#C4B699","#BFB398","#BFAE94","#C1A98E","#C4A388","#C69E82","#C8997C","#CB9476","#CD8E70","#CF896A","#CB8669","#C1866B","#B7856D","#AD846F","#A38471","#998374","#8E8376","#848278","#808078","#867B73","#8C766E","#92716A","#996C65","#9F6760","#A5625B","#AB5D56","#AE5953","#A25A57","#965C5A","#895D5E","#7D5F61","#716065","#646268","#58636C","#4C6570"],"every_word_has_own_color":true,"missing_colors":false,"label":null}},"evals":[],"jsHooks":[]}</script>
     </div>
     <div id="cite">Source: <a href="http://c2d.ch" target="_blank">Centre for Research on Direct Democracy (c2d)</a> | Code: <a href="https://github.com/jbkunst/d3wordcloud" target="_blank">d3wordcloud</a> | swissinfo.ch</div>
     <script type="text/javascript" src="https://www.swissinfo.ch/static/Themes/basic/js/vendor/iframeResizer.contentWindow.3.5.3.min.js"></script>
